zitadel: secretとしてconfigを生成

--- a/k8s/apps/zitadel/externalsecret.yaml
+++ b/k8s/apps/zitadel/externalsecret.yaml
@@ -9,12 +9,26 @@ spec:
   refreshInterval: 1m
   target:
     name: zitadel
+    template:
+      engineVersion: v2
+      type: Opaque
+      TemplateFrom:
+      - target: Data
+        configMap:
+          name: zitadel-config
+          items:
+          - key: config.yaml
+            templateAs: Values
   data:
     - secretKey: masterkey
       remoteRef:
         key: zitadel
         property: masterkey
-    - secretKey: config-yaml
+    - secretKey: postgresdbpassword
       remoteRef:
-        key: zitadel
-        property: config-yaml
+        key: postgres_passwords
+        property: postgres
+    - secretKey: zitadeldbpassword
+      remoteRef:
+        key: postgres_passwords
+        property: zitadel
