--- a/k8s/apps/zitadel/kustomization.yaml
+++ b/k8s/apps/zitadel/kustomization.yaml
@@ -2,7 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
 resources:
-  - externalsecret.yaml
-  - helm.yaml
+- externalsecret.yaml
+- helm.yaml
 components:
-  - ../../components/helm
+- ../../components/helm
+configMapGenerator:
+- name: zitadel-config
+  files:
+    - config.yaml
+generatorOptions:
+  disableNameSuffixHash: true
