--- a/k8s/apps/zitadel/externalsecret.yaml
+++ b/k8s/apps/zitadel/externalsecret.yaml
@@ -12,7 +12,7 @@ spec:
     template:
       engineVersion: v2
       type: Opaque
-      TemplateFrom:
+      templateFrom:
       - target: Data
         configMap:
           name: zitadel-config
