zitadel: fix secretkey

--- a/k8s/apps/zitadel/helm.yaml
+++ b/k8s/apps/zitadel/helm.yaml
@@ -24,7 +24,7 @@ spec:
         ExternalSecure: true
       masterkeySecretName: "zitadel"
       configSecretName: zitadel
-      configSecretKey: config-yaml
+      configSecretKey: "config.yaml"
     replicaCount: 1
     ingress:
       enabled: true
