zitadel: 新DBに切り替え

--- a/k8s/apps/zitadel/config.yaml
+++ b/k8s/apps/zitadel/config.yaml
@@ -1,6 +1,6 @@
 Database:
   postgres:
-    Host: "postgresql.databases.svc.cluster.local"
+    Host: "postgresql-default.databases.svc.cluster.local"
     Port: 5432
     Database: zitadel
     MaxOpenConns: 25
