misskey: config変更 & 新DB

--- a/k8s/apps/misskey/externalsecret.yaml
+++ b/k8s/apps/misskey/externalsecret.yaml
@@ -9,12 +9,22 @@ spec:
   refreshInterval: 1m
   target:
     name: misskey-secret
+    template:
+      engineVersion: v2
+      type: Opaque
+      templateFrom:
+      - target: Data
+        configMap:
+          name: misskey-config
+          items:
+          - key: default.yml
+            templateAs: Values
   data:
     - secretKey: postgres-password
       remoteRef:
         key: postgres_passwords
         property: misskey
-    - secretKey: "default.yml"
+    - secretKey: redispassword
       remoteRef:
-        key: misskey
-        property: config
+        key: redis
+        property: redispassword
