misskey: fix typo

--- a/k8s/apps/misskey/externalsecret.yaml
+++ b/k8s/apps/misskey/externalsecret.yaml
@@ -27,4 +27,4 @@ spec:
     - secretKey: redispassword
       remoteRef:
         key: redis
-        property: redispassword
+        property: password
