--- a/k8s/apps/misskey/deployment.yaml
+++ b/k8s/apps/misskey/deployment.yaml
@@ -55,7 +55,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: misskey-secret
-                  key: postgres-password
+                  key: misskeydbpassword
           resources:
             requests:
               cpu: 10m
