--- a/k8s/apps/misskey/externalsecret.yaml
+++ b/k8s/apps/misskey/externalsecret.yaml
@@ -20,7 +20,7 @@ spec:
           - key: default.yml
             templateAs: Values
   data:
-    - secretKey: postgres-password
+    - secretKey: misskeydbpassword
       remoteRef:
         key: postgres_passwords
         property: misskey
