misskey: fix secret template

--- a/k8s/apps/misskey/externalsecret.yaml
+++ b/k8s/apps/misskey/externalsecret.yaml
@@ -12,6 +12,9 @@ spec:
     template:
       engineVersion: v2
       type: Opaque
+      data:
+        misskeydbpassword: "{{ .misskeydbpassword }}"
+        redispassword: "{{ .redispassword }}"
       templateFrom:
       - target: Data
         configMap:
