--- a/k8s/apps/hedgedoc/deployment.yaml
+++ b/k8s/apps/hedgedoc/deployment.yaml
@@ -97,3 +97,15 @@ spec:
                 secretKeyRef:
                   name: hedgedoc-secret
                   key: session-secret
+          livenessProbe:
+            httpGet:
+              path: /_health
+              port: 3000
+            initialDelaySeconds: 3
+            periodSeconds: 3
+          startupProbe:
+            httpGet:
+              path: /_health
+              port: 3000
+            failureThreshold: 30
+            periodSeconds: 10
