postgres-operator-uiをamd64に

--- a/k8s/apps/zaland-psql-operator-ui/helm.yaml
+++ b/k8s/apps/zaland-psql-operator-ui/helm.yaml
@@ -15,3 +15,6 @@ spec:
     spec:
       chart: postgres-operator-ui
       version: 1.11.0
+  values:
+    nodeSelector:
+      kubernetes.io/arch: amd64
