psql password参照先切り替え

--- a/k8s/apps/fitbit-manager/externalsecret.yaml
+++ b/k8s/apps/fitbit-manager/externalsecret.yaml
@@ -25,7 +25,7 @@ spec:
     - secretKey: postgres_password
       remoteRef:
         key: postgres_passwords
-        property: fitbit_manager
+        property: fitbit-manager
     - secretKey: influxdb_auth_token
       remoteRef:
         key: influxdb
