psql password参照先切り替え

--- a/k8s/apps/oekaki-dengon-game/externalsecret.yaml
+++ b/k8s/apps/oekaki-dengon-game/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
     - secretKey: postgres-admin-password
       remoteRef:
         key: postgres_passwords
-        property: admin-password
+        property: postgres
     - secretKey: postgres-user-password
       remoteRef:
         key: postgres_passwords
