--- a/k8s/apps/openchokin/externalsecret.yaml
+++ b/k8s/apps/openchokin/externalsecret.yaml
@@ -25,7 +25,7 @@ spec:
     - secretKey: postgres-admin-password
       remoteRef:
         key: postgres_passwords
-        property: admin-password
+        property: postgres
     - secretKey: postgres-user-password
       remoteRef:
         key: postgres_passwords
