zalando: add ui & fix typo

--- a/k8s/apps/zalando-psql-operator/helm.yaml
+++ b/k8s/apps/zalando-psql-operator/helm.yaml
@@ -2,14 +2,14 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: zaland-psql-operator
+  name: zalando-psql-operator
 spec:
   url: https://opensource.zalando.com/postgres-operator/charts/postgres-operator
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: zaland-psql-operator
+  name: zalando-psql-operator
 spec:
   chart:
     spec:
