--- a/k8s/apps/zalando-psql-operator-ui/service.yaml
+++ b/k8s/apps/zalando-psql-operator-ui/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: "v1"
 kind: "Service"
 metadata:
-  name: "postgres-operator-ui"
+  name: "zalando-postgres-operator-ui"
   labels:
-    application: "postgres-operator-ui"
+    application: "zalando-postgres-operator-ui"
 spec:
   type: "ClusterIP"
   selector:
-    name: "postgres-operator-ui"
+    name: "zalando-postgres-operator-ui"
   ports:
     - port: 80
       protocol: "TCP"
