--- a/k8s/apps/zalando-psql-operator-ui/ui-service-account-rbac.yaml
+++ b/k8s/apps/zalando-psql-operator-ui/ui-service-account-rbac.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: postgres-operator-ui
+  name: zalando-postgres-operator-ui
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: postgres-operator-ui
+  name: zalando-postgres-operator-ui
 rules:
 - apiGroups:
   - acid.zalan.do
@@ -53,11 +53,11 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: postgres-operator-ui
+  name: zalando-postgres-operator-ui
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: postgres-operator-ui
+  name: zalando-postgres-operator-ui
 subjects:
 - kind: ServiceAccount
-  name: postgres-operator-ui
+  name: zalando-postgres-operator-ui
