--- a/k8s/apps/zalando-psql-operator-ui/oauth2-proxy/externalsecret.yaml
+++ b/k8s/apps/zalando-psql-operator-ui/oauth2-proxy/externalsecret.yaml
@@ -13,18 +13,18 @@ spec:
       engineVersion: v2
       data:
         client-id: "259190207394414692@walnuts.dev"
-        cookie-secret: "{{ .cookie-secret }}"
-        redis-password: "{{ .redis-password }}"
+        cookie-secret: "{{ .cookiesecret }}"
+        redis-password: "{{ .redispassword }}"
   data:
     # - secretKey: client-secret
     #   remoteRef:
     #     key: zalando-ui-oauth2-proxy
     #     property: client-secret
-    - secretKey: cookie-secret
+    - secretKey: cookiesecret
       remoteRef:
         key: zalando-ui-oauth2-proxy
         property: cookie-secret
-    - secretKey: redis-password
+    - secretKey: redispassword
       remoteRef:
         key: redis
         property: password
