zalando: couldn't find key client-secret in Secret databases/zalando-ui-oauth2-proxy

--- a/k8s/apps/zalando-psql-operator-ui/oauth2-proxy/externalsecret.yaml
+++ b/k8s/apps/zalando-psql-operator-ui/oauth2-proxy/externalsecret.yaml
@@ -13,6 +13,7 @@ spec:
       engineVersion: v2
       data:
         client-id: "259190207394414692@walnuts.dev"
+        client-secret: ""
         cookie-secret: "{{ .cookiesecret }}"
         redis-password: "{{ .redispassword }}"
   data:
