zalando: stop using pkce

--- a/k8s/apps/zalando-psql-operator-ui/oauth2-proxy/externalsecret.yaml
+++ b/k8s/apps/zalando-psql-operator-ui/oauth2-proxy/externalsecret.yaml
@@ -13,14 +13,14 @@ spec:
       engineVersion: v2
       data:
         client-id: "259190207394414692@walnuts.dev"
-        client-secret: ""
+        client-secret: "{{ .clientsecret }}"
         cookie-secret: "{{ .cookiesecret }}"
         redis-password: "{{ .redispassword }}"
   data:
-    # - secretKey: client-secret
-    #   remoteRef:
-    #     key: zalando-ui-oauth2-proxy
-    #     property: client-secret
+    - secretKey: clientsecret
+      remoteRef:
+        key: zalando-ui-oauth2-proxy
+        property: client-secret
     - secretKey: cookiesecret
       remoteRef:
         key: zalando-ui-oauth2-proxy
