--- a/k8s/apps/sweets-rebellion/deployment.yaml
+++ b/k8s/apps/sweets-rebellion/deployment.yaml
@@ -30,7 +30,9 @@ spec:
             limits:
               cpu: 1000m
               memory: 512Mi
-            requests: {}
+            requests:
+              cpu: 1m
+              memory: 10Mi
       imagePullSecrets:
         - name: ghcr-login-secret
       volumes:
