disable grafana persistence

--- a/k8s/apps/grafana/helm.yaml
+++ b/k8s/apps/grafana/helm.yaml
@@ -27,10 +27,12 @@ spec:
     testFramework:
       enabled: false
     persistence:
-      enabled: true
+      enabled: false
       storageClassName: longhorn
       volumeName: grafana
       size: 1Gi
+      inMemory:
+        enabled: true
     service:
       type: ClusterIP
     admin:
