--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -62,17 +62,16 @@ jobs:
       # Helm Diff
       - name: install dependencies
         run: |
-          sudo su
           # Install jq
-          wget https://github.com/jqlang/jq/releases/download/jq-1.7.1/jq-linux-amd64 -O /usr/bin/jq
-          chmod +x /usr/bin/jq
+          sudo wget https://github.com/jqlang/jq/releases/download/jq-1.7.1/jq-linux-amd64 -O /usr/bin/jq
+          sudo chmod +x /usr/bin/jq
 
           # Install yq
-          wget https://github.com/mikefarah/yq/releases/download/v4.43.1/yq_linux_amd64 -O /usr/bin/yq
-          chmod +x /usr/bin/yq
+          sudo wget https://github.com/mikefarah/yq/releases/download/v4.43.1/yq_linux_amd64 -O /usr/bin/yq
+          sudo chmod +x /usr/bin/yq
 
           # install helm
-          curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+          curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | sudo bash
 
       - name: HelmReleaseとHelmRepoを抽出
         run: |
