手動実行を追加

--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -10,6 +10,7 @@ on:
     paths:
       - "k8s/**"
       - ".github/workflows/k8s.yaml"
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
