--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -85,12 +85,12 @@ jobs:
       - name: helm repo add
         run: |
           # helm repo add head-<.metadata.name-.metadata.namespace> <.spec.url>
-          cat /tmp/helmrepository-head.yaml | yq -r '"head" + .metadata.name + "-" + .metadata.namespace + " " + .spec.url' | while read line; do
+          cat /tmp/helmrepository-head.yaml | yq -r '"head-" + .metadata.name + "-" + .metadata.namespace + " " + .spec.url' | while read line; do
             helm repo add $line
           done
 
           # helm repo add base-<.metadata.name-.metadata.namespace> <.spec.url>
-          cat /tmp/helmrepository-base.yaml | yq -r '"base" + .metadata.name + "-" + .metadata.namespace + " " + .spec.url' | while read line; do
+          cat /tmp/helmrepository-base.yaml | yq -r '"base-" + .metadata.name + "-" + .metadata.namespace + " " + .spec.url' | while read line; do
             helm repo add $line
           done
 
