--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -96,17 +96,17 @@ jobs:
 
       - name: helm install --dry-run
         run: |
-          length = $(cat /tmp/helmreleases-head.json | jq -s length)
-          for i in $(seq 0 $length); do
+          length=$(cat /tmp/helmreleases-head.json | jq -s length)
+          for i in $( seq 0 $(($length - 1)) ); do
             cat /tmp/helmreleases-head.json | jq -rs ".[$i] | .spec.values" | tee values.json
-            command = $(cat /tmp/helmreleases-head.json | jq -rs "\"helm install \" + .[$i].metadata.name + \" --namespace \" + .[$i].metadata.namespace + \" head-\" + .[$i].spec.chart.spec.sourceRef.name + \"-\" + .[$i].metadata.namespace + \"/\" + .[$i].spec.chart.spec.chart + \" -f values.json --dry-run -o yaml\"")
+            command=$(cat /tmp/helmreleases-head.json | jq -rs "\"helm install \" + .[$i].metadata.name + \" --namespace \" + .[$i].metadata.namespace + \" head-\" + .[$i].spec.chart.spec.sourceRef.name + \"-\" + .[$i].metadata.namespace + \"/\" + .[$i].spec.chart.spec.chart + \" -f values.json --dry-run -o yaml\"")
             eval $command >> /tmp/manifests-head.yaml
           done
 
-          length = $(cat /tmp/helmreleases-base.json | jq -s length)
-          for i in $(seq 0 $length); do
+          length=$(cat /tmp/helmreleases-base.json | jq -s length)
+          for i in $( seq 0 $(($length - 1)) ); do
             cat /tmp/helmreleases-base.json | jq -rs ".[$i] | .spec.values" | tee values.json
-            command = $(cat /tmp/helmreleases-base.json | jq -rs "\"helm install \" + .[$i].metadata.name + \" --namespace \" + .[$i].metadata.namespace + \" base-\" + .[$i].spec.chart.spec.sourceRef.name + \"-\" + .[$i].metadata.namespace + \"/\" + .[$i].spec.chart.spec.chart + \" -f values.json --dry-run -o yaml\"")
+            command=$(cat /tmp/helmreleases-base.json | jq -rs "\"helm install \" + .[$i].metadata.name + \" --namespace \" + .[$i].metadata.namespace + \" base-\" + .[$i].spec.chart.spec.sourceRef.name + \"-\" + .[$i].metadata.namespace + \"/\" + .[$i].spec.chart.spec.chart + \" -f values.json --dry-run -o yaml\"")
             eval $command >> /tmp/manifests-base.yaml
           done
 
