--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -141,12 +141,14 @@ jobs:
 
           </details>
           EOF
-      - name: Comment manifest diff to GitHub commit
+
+      # PRへのコメントだけど、issue commentのAPIを使うらしい
+      - name: Comment manifest diff to GitHub PR
         run: |
           cat /tmp/comment.md | jq -Rs '{ "body": . }' | curl --fail \
             -X POST -H 'Accept: application/vnd.github.v3+json' \
             --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
-            https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.number }}/comments \
+            https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.number }}/comments \
             -d @-
 
   lint:
