--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -6,7 +6,6 @@ on:
       - "k8s/**"
       - ".github/workflows/k8s.yaml"
   push:
-    branches: [main]
     paths:
       - "k8s/**"
       - ".github/workflows/k8s.yaml"
@@ -122,7 +121,6 @@ jobs:
   diff:
     runs-on: ubuntu-latest
     needs: build
-    if: github.event_name == 'pull_request'
     steps:
       - uses: actions/download-artifact@v4
         with:
@@ -139,6 +137,20 @@ jobs:
           \`\`\`
 
           </details>" | tee /tmp/comment.md
+
+      - name: branchからPR番号を取得
+        if: github.event_name != 'pull_request'
+        id: get_pr_number_from_branch
+        run: |
+          branch=$(echo ${{ github.ref }} | cut -d'/' -f3)
+          pr_number=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -X GET "https://api.github.com/repos/${{ github.repository }}/pulls?state=open" | jq -r ".[] | select(.head.ref == \"$branch\") | .number")
+          echo "::set-output name=pr_number::$pr_number"
+
+      - name: eventからPR番号を取得
+        if: github.event_name == 'pull_request'
+        id: get_pr_number_from_event
+        run: |
+          echo "::set-output name=pr_number::${{ github.event.number }}"
 
       # PRへのコメントだけど、issue commentのAPIを使うらしい
       - name: Comment manifest diff to GitHub PR
