--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -144,16 +144,30 @@ jobs:
         run: |
           branch=$(echo ${{ github.ref }} | cut -d'/' -f3)
           pr_number=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -X GET "https://api.github.com/repos/${{ github.repository }}/pulls?state=open" | jq -r ".[] | select(.head.ref == \"$branch\") | .number")
-          echo "::set-output name=pr_number::$pr_number"
+          echo "pr_number=$pr_number" >> $GITHUB_OUTPUT
 
       - name: eventからPR番号を取得
         if: github.event_name == 'pull_request'
         id: get_pr_number_from_event
         run: |
-          echo "::set-output name=pr_number::${{ github.event.number }}"
+          echo "pr_number=${{ github.event.number }}" >> $GITHUB_ENV
+
+      - name: Set PR number
+        id: set_pr_number
+        run: |
+          if [ -s "${{ steps.get_pr_number_from_branch.outputs.pr_number }}" ]; then
+            echo "PR number is ${{ steps.get_pr_number_from_branch.outputs.pr_number }}"
+            echo "pr_number=${{ steps.get_pr_number_from_branch.outputs.pr_number }}" >> $GITHUB_ENV
+          elif [ -s "${{ steps.get_pr_number_from_event.outputs.pr_number }}" ]; then
+            echo "PR number is ${{ steps.get_pr_number_from_event.outputs.pr_number }}"
+            echo "pr_number=${{ steps.get_pr_number_from_event.outputs.pr_number }}" >> $GITHUB_ENV
+          else
+            echo "PR number is not found"
+          fi
 
       # PRへのコメントだけど、issue commentのAPIを使うらしい
       - name: Comment manifest diff to GitHub PR
+        if: steps.set_pr_number.outputs.pr_number != ''
         run: |
           cat /tmp/comment.md | jq -Rs '{ "body": . }' | curl --fail \
             -X POST -H 'Accept: application/vnd.github.v3+json' \
