--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -142,7 +142,7 @@ jobs:
         if: github.event_name != 'pull_request'
         id: get_pr_number_from_branch
         run: |
-          branch=$(echo ${{ github.ref }} | cut -d'/' -f3)
+          branch=$(echo ${{ github.ref }} | sed -e 's/refs\/heads\///')
           pr_number=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -X GET "https://api.github.com/repos/${{ github.repository }}/pulls?state=open" | jq -r ".[] | select(.head.ref == \"$branch\" or .base.ref == \"$branch\") | .number")
           echo "pr_number=$pr_number" >> $GITHUB_OUTPUT
 
