--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -172,7 +172,7 @@ jobs:
           cat /tmp/comment.md | jq -Rs '{ "body": . }' | curl --fail \
             -X POST -H 'Accept: application/vnd.github.v3+json' \
             --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
-            https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.number }}/comments \
+            https://api.github.com/repos/${{ github.repository }}/issues/${{ steps.set_pr_number.outputs.pr_number }}/comments \
             -d @-
 
   lint:
