--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -121,6 +121,7 @@ jobs:
   diff:
     runs-on: ubuntu-latest
     needs: build
+    if: github.event_name == 'pull_request'
     steps:
       - uses: actions/download-artifact@v4
         with:
@@ -138,41 +139,13 @@ jobs:
 
           </details>" | tee /tmp/comment.md
 
-      - name: branchからPR番号を取得
-        if: github.event_name != 'pull_request'
-        id: get_pr_number_from_branch
-        run: |
-          branch=$(echo ${{ github.ref }} | sed -e 's/refs\/heads\///')
-          pr_number=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -X GET "https://api.github.com/repos/${{ github.repository }}/pulls?state=open" | jq -r ".[] | select(.head.ref == \"$branch\") | .number")
-          echo "pr_number=$pr_number" >> $GITHUB_OUTPUT
-
-      - name: eventからPR番号を取得
-        if: github.event_name == 'pull_request'
-        id: get_pr_number_from_event
-        run: |
-          echo "pr_number=${{ github.event.number }}" >> $GITHUB_OUTPUT
-
-      - name: Set PR number
-        id: set_pr_number
-        run: |
-          if [ "${{ steps.get_pr_number_from_branch.outputs.pr_number }}" != "" ]; then
-            echo "PR number is ${{ steps.get_pr_number_from_branch.outputs.pr_number }}"
-            echo "pr_number=${{ steps.get_pr_number_from_branch.outputs.pr_number }}" >> $GITHUB_OUTPUT
-          elif [ "${{ steps.get_pr_number_from_event.outputs.pr_number }}" != "" ]; then
-            echo "PR number is ${{ steps.get_pr_number_from_event.outputs.pr_number }}"
-            echo "pr_number=${{ steps.get_pr_number_from_event.outputs.pr_number }}" >> $GITHUB_OUTPUT
-          else
-            echo "PR number is not found"
-          fi
-
       # PRへのコメントだけど、issue commentのAPIを使うらしい
       - name: Comment manifest diff to GitHub PR
-        if: steps.set_pr_number.outputs.pr_number != ''
         run: |
           cat /tmp/comment.md | jq -Rs '{ "body": . }' | curl --fail \
             -X POST -H 'Accept: application/vnd.github.v3+json' \
             --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
-            https://api.github.com/repos/${{ github.repository }}/issues/${{ steps.set_pr_number.outputs.pr_number }}/comments \
+            https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.number }}/comments \
             -d @-
 
   lint:
