--- a/k8s/namespaces/namespaces.yaml
+++ b/k8s/namespaces/namespaces.yaml
@@ -16,6 +16,11 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: code-server
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: metallb-system
 ---
 apiVersion: v1
