--- a/k8s/apps/code-server-operator/helm.yaml
+++ b/k8s/apps/code-server-operator/helm.yaml
@@ -17,3 +17,7 @@ spec:
       version: 0.2.2
   values:
     fullnameOverride: code-server-operator
+    manager:
+      image:
+        repository: walnuts1018/code-server-operator
+        tag: 0.2.2 
