--- a/k8s/apps/code-server-operator/helm.yaml
+++ b/k8s/apps/code-server-operator/helm.yaml
@@ -17,7 +17,8 @@ spec:
       version: 0.2.2
   values:
     fullnameOverride: code-server-operator
-    manager:
-      image:
-        repository: walnuts1018/code-server-operator
-        tag: 0.2.2
+    controllerManager:
+      manager:
+        image:
+          repository: walnuts1018/code-server-operator
+          tag: 0.2.2
