--- a/k8s/apps/2024-ac-hacking/back/deployment.yaml
+++ b/k8s/apps/2024-ac-hacking/back/deployment.yaml
@@ -24,4 +24,23 @@ spec:
             requests:
               cpu: 10m
               memory: 5Mi
-
+          env:
+            - name: PSQL_HOST
+              values: "postgresql-default.databases.svc.cluster.local"
+            - name: PSQL_PORT
+              values: "5432"
+            - name: PSQL_DATABASE
+              values: "ac_hacking"
+            - name: PSQL_USER
+              values: "ac_hacking"
+            - name: PSQL_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: ac-hacking-secret
+                  key: postgres_password
+            - name: PSQL_SSLMODE
+              values: "disable"
+            - name: PROXY_PASSWORD
+              value: "sukina-souzai-happyo-doragon"
+            - name: FRONT_URL
+              values: "http://2024-ac-hacking-front.default.svc.cluster.local:80"
