--- a/k8s/apps/ac-hacking-2024/back/ingress.yaml
+++ b/k8s/apps/ac-hacking-2024/back/ingress.yaml
@@ -1,11 +1,11 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: 2024-ac-hacking-back
+  name: ac-hacking-2024-back
 spec:
   ingressClassName: "nginx"
   rules:
-    - host: "2024-ac-hacking.walnuts.dev"
+    - host: "ac-hacking-2024.walnuts.dev"
       http:
         paths:
           - path: /
