--- a/k8s/apps/ac-hacking-2024/front/kustomization.yaml
+++ b/k8s/apps/ac-hacking-2024/front/kustomization.yaml
@@ -2,10 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
 commonLabels:
-  app: 2024-ac-hacking-back
+  app: ac-hacking-2024-front
 resources:
   - deployment.yaml
-  - ingress.yaml
   - service.yaml
   - image-policy.yaml
-  - externalsecret.yaml
