--- a/k8s/apps/ac-hacking-2024/kustomization.yaml
+++ b/k8s/apps/ac-hacking-2024/kustomization.yaml
@@ -2,8 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
 commonLabels:
-  app: 2024-ac-hacking-front
+  app: ac-hacking-2024
 resources:
-  - deployment.yaml
-  - service.yaml
-  - image-policy.yaml
+  - back
+  - front
