--- a/k8s/apps/ac-hacking-2024/front/deployment.yaml
+++ b/k8s/apps/ac-hacking-2024/front/deployment.yaml
@@ -24,4 +24,5 @@ spec:
             requests:
               cpu: 0m
               memory: 5Mi
-
+      nodeSelector:
+        kubernetes.io/arch: amd64
