--- a/k8s/apps/ac-hacking-2024/back/externalsecret.yaml
+++ b/k8s/apps/ac-hacking-2024/back/externalsecret.yaml
@@ -1,14 +1,14 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: ac-hacking-2024-front
+  name: ac-hacking-2024
 spec:
   secretStoreRef:
     name: vault-secretstore
     kind: ClusterSecretStore
   refreshInterval: 1m
   target:
-    name: ac-hacking-2024-front
+    name: ac-hacking-2024
   data:
     - secretKey: postgres_password
       remoteRef:
