--- a/k8s/apps/ac-hacking-2024/back/deployment.yaml
+++ b/k8s/apps/ac-hacking-2024/back/deployment.yaml
@@ -36,7 +36,7 @@ spec:
             - name: PSQL_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: ac-hacking-2024-front
+                  name: ac-hacking-2024
                   key: postgres_password
             - name: PSQL_SSLMODE
               values: "disable"
